--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,12 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+@import "components/mealcard";
+@import "components/category";
+
+@import "components/cartel";
+@import "components/map";
+@import "pages/index";
+
+@import "pages/home";
